<resources>
    <string name="app_name">Zaragoza Trips</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="places">Suggested Places</string>
    <string name="custom_places">My Places</string>
    <string name="near_me">Near Me</string>
    <string name="new_place">New Place</string>
    <string name="my_places">My Places</string>
    <string name="about_the_app">About the App</string>
    <string name="about">About…</string>
    <string name="food_places">Food Places</string>
    <string name="other_places">Other Places</string>
    <string name="entertainment_places">Entertainment Places</string>
    <string name="museum_places">Museum Places</string>

    <string name="videos">Videos</string>
    <string name="photos">Photos</string>

    <string name="title_base">Zaragoza Trips: %1$s</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gradient">gradient</string>
    <string name="time">time</string>
    <string name="location">location</string>
    <string name="calculating">Calculating…</string>
    <string name="km_two_decimals_format">%.2f km</string>
    <string name="place_item_key">PLACE_ITEM_KEY</string>
    <string name="custom_place_item_key">CUSTOM_PLACE_ITEM_KEY</string>
    <string name="problem_loading">There was a problem during the data download</string>
    <string name="entertainment_key">Entretenimiento</string>
    <string name="museum_key"><![CDATA[Museo & Monumento]]></string>
    <string name="food_beverage_key"><![CDATA[Comida & Bebida]]></string>
    <string name="app_display_name">Z Trips</string>
    <string name="clary_morla">Clary Morla</string>
    <string name="libranner_santos">Libranner Santos</string>
    <string name="developers">Developers</string>
    <string name="logo">logo</string>
    <string name="logo_usj">logo_usj</string>
    <string name="app_description">App para identificar lugares de interés en Zaragoza.</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="video">video</string>
    <string name="camera">camera</string>
    <string name="save">Save</string>
    <string name="invalid_place_message">Please make sure tou filled the name text field and took a picture</string>
    <string name="you_ve_arrived">You\'ve arrived!</string>
    <string name="channel_name">ztrips_channel</string>
    <string name="channel_description">ztrips</string>
    <string name="new_place_saved">New place saved</string>
    <string name="image">image</string>
    <string name="record">Record</string>
    <string name="play">Play</string>
</resources>
