<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_near_me"
            android:icon="@drawable/ic_near_me"
            android:title="@string/near_me" />
        <item
            android:id="@+id/nav_new_place"
            android:icon="@drawable/ic_new_place"
            android:title="@string/new_place" />
        <item
            android:id="@+id/nav_places"
            android:icon="@drawable/ic_menu_places"
            android:title="@string/places" />
        <item
            android:id="@+id/nav_custom_places"
            android:icon="@drawable/ic_custom_place"
            android:title="@string/custom_places" />
    </group>

    <item android:title="@string/about_the_app">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
