<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp">

    <ImageView
        android:id="@+id/place_image_view"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:contentDescription="@string/my_places"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_place"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v4.widget.Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/gradient"
        app:layout_constraintBottom_toBottomOf="@+id/place_image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/space"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/gradient" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space" />

    <TextView
        android:id="@+id/distanceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="@+id/space"
        app:layout_constraintTop_toBottomOf="@+id/space" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/location"
        android:tint="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/distanceTextView"
        app:layout_constraintTop_toTopOf="@+id/distanceTextView"
        app:srcCompat="@android:drawable/ic_menu_mylocation" />

</android.support.constraint.ConstraintLayout>
